# athleto-app-rs

./: .envrc  AGENTS.md  Cargo.toml  Dockerfile  README.md  flake.nix
.github/workflows/: ci.yml  e2e.yml
.nix/: dev-shell.nix
certs/: README.md
deploy/k8s/: README.md  argocd-application.yaml  deployment.yaml  service.yaml
docs/: cart-holds.md  erp-integration.md  known-gaps-and-hardening.md  maintenance.md  secrets-management.md  supabase-rls-runtime.md  testing.md
e2e/: b2b-approval.test.mjs  chrome.test.mjs  orders.test.mjs  package-lock.json  package.json  payments-ui.test.mjs  security.test.mjs  storefront.test.mjs  twofa.test.mjs
e2e/cluster/: run-cluster.mjs
e2e/lib/: driver.mjs  harness.mjs
migrations/: 0001_products_and_carts.sql  0002_seed_products.sql  0003_athleto_rebrand.sql  0004_b2b_b2c_auth_orders.sql  0005_order_fulfillment.sql  0005_rls_products_carts.sql  0006_payments.sql  0007_security_hardening.sql
scripts/: dpm.sh
src/: account.rs  anti_abuse.rs  api.rs  assets.rs  auth.rs  billing.rs  cart.rs  coordinate.rs  db.rs  entities.rs  lib.rs  main.rs  mfa_state.rs  orders.rs  pages.rs  payments.rs  rate_limit.rs  request_trust.rs  secrets.rs  security.rs  shared_auth.rs  startup.rs  telemetry.rs  ws.rs
src/entities/: b2b_api_key.rs  cart.rs  cart_item.rs  customer_profile.rs  inventory.rs  login_event.rs  mod.rs  order.rs  order_item.rs  payment.rs  payment_event.rs  payment_subscription.rs  product.rs  stock_hold.rs
tests/: integration.rs  modularization.rs  order_ownership_db.rs  recurring_runner_db.rs
tests/browser/: package-lock.json  package.json  server.mjs  storefront.pptr.test.mjs  storefront.pw.test.mjs
