[package]
name = "athleto-app-rs"
version = "0.1.0"
edition = "2021"
description = "Athlet-O shop app: Maud + Axum + SQLx + Supabase + HTMX"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
hex = "0.4"
hmac = "0.12"
maud = { version = "0.27", features = ["axum"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# ORM for all new data access (payments, billing); wraps the same sqlx
# Postgres pool. Legacy commerce queries in db.rs are ported incrementally.
sea-orm = { version = "1.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
