[package]
name = "athleto-app-rs"
version = "0.1.0"
edition = "2021"
description = "Athlet-O shop app: Maud + Axum + SeaORM + Supabase + HTMX"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
hex = "0.4"
hmac = "0.12"
maud = { version = "0.27", features = ["axum"] }
opentelemetry = "0.27"
opentelemetry-http = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["limit", "timeout", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
